[metadata]
name = cloudgen
version = 1.6
author = Keith F. Prussing
author_email = Keith.Prussing@gtri.gatech.edu
description = cloudgen
long_description = file: README
long_description_content_type = text/plain
license_files = COPYING
url = http://www.met.reading.ac.uk/clouds/cloudgen/
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed
keywords =
    simulation
    modeling
    cloud
project_urls =
    Documentation = http://www.met.reading.ac.uk/clouds/cloudgen/
    Source Code = https://github.com/kprussing/cloudgen
    Issue Tracker = https://github.com/kprussing/cloudgen/issues

[options]
packages = find:
package_dir =
    =python
install_requires = numpy
                   netCDF4
include_package_data = True
python_requires = >=3.7, <4
zip_safe = False

[options.packages.find]
where = python
include = cloudgen

[options.package_data]
cloudgen = *.pyi, **/*.pyi, *.typed, **/*.typed

[options.extras_require]
test = pytest
       pip>=21.1
nox = toml
      nox>=2021.10.1
mypy = types-toml

[flake8]
per-file-ignores =
    python/cloudgen/__init__.py: F401

[mypy]
namespace_packages = True
explicit_package_bases = True
mypy_path = python,test

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-netCDF4.*]
ignore_missing_imports = True
